src/objects/Salary__c.object
<CustomObject>
    <fields>
        <fullName>Actual_Pay__c</fullName>
        <label>Actual Pay</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HRA__c</fullName>
        <label>HRA</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Max_Pay__c</fullName>
        <label>Max Pay</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Min_Pay__c</fullName>
        <label>Min Pay</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Position</label>
        <referenceTo>Position__c</referenceTo>
        <relationshipLabel>Salaries</relationshipLabel>
        <relationshipName>Salaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Salary</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PAY-{0000}</displayFormat>
        <label>Salary Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Salaries</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>